small spacing fixes

--- a/srcs/frontend/src/styles/contentPages.css
+++ b/srcs/frontend/src/styles/contentPages.css
@@ -14,13 +14,13 @@
     @apply flex flex-col overflow-auto py-6 space-y-1;
     width: calc(100% - 220px);
     margin-left: 220px;
-    margin-top: 60px;
+    margin-top: 120px;
 }
 
-@media (min-width: 880px) {
+@media (min-width: 1320px) {
 	.middle {
 		right: 220px;
-		width: auto;
+		width: 1100px;
 	}
 }
 .contentArea {
